# genomi

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  DESIGN_PRINCIPLES.md  INSTALL_FOR_AGENTS.md  LICENSE  README.md  README.zh-CN.md  RELEASE_NOTES.md  SKILL.md  llms-full.txt  llms.txt  pyproject.toml
.github/workflows/: ci.yml
scripts/: _install_for_agents_downloads.py  _install_for_agents_lib.py  build_dashboard.py  build_llms.py  install_for_agents.py
skills/: _output-rules.md
skills/active-genome-index/: SKILL.md
skills/analytical-grounding/: SKILL.md
skills/ancestry/: SKILL.md
skills/clinvar/: SKILL.md
skills/conventions/: context-routing.md  evidence-quality.md
skills/decode/: SKILL.md
skills/drug-targets/: SKILL.md
skills/functional-genomics/: SKILL.md
skills/genomic-inquiry/: SKILL.md
skills/gnomad/: SKILL.md
skills/gwas-catalog/: SKILL.md
skills/journal/: SKILL.md
skills/nutrigenomics/: SKILL.md
skills/pharmacogenomics/: SKILL.md
skills/prs/: SKILL.md
skills/rare-disease-cancer/: SKILL.md
skills/sequence/: SKILL.md
skills/source-research/: SKILL.md
skills/variant-evidence/: SKILL.md
src/genomi/: __init__.py  __main__.py
src/genomi/active_genome_index/: __init__.py  _agi_build.py  _agi_query.py  build.py  (+20 more)
tests/: _active_genome_index_contract_fixtures.py  _candidate_helper.py  _capability_matrix_contract.py  _external_layers_helpers.py  _genomi_runtime_helpers.py  _gwas_helpers.py  _pgx_review_helpers.py  test_active_genome_index_canonical_dependencies.py  test_active_genome_index_downstream_contract.py  test_active_genome_index_reader_boundary.py  test_active_genome_index_sequencing_e2e.py  test_agi_access.py  test_analytical_grounding.py  test_ancestry.py  test_ancestry_panel_build.py  test_background_jobs.py  test_capability_matrix_contract.py  test_clinpgx.py  test_clinvar_liftover.py  test_clinvar_observed_alleles.py  test_decode_dashboard.py  test_decode_dashboard_adapters.py  test_decode_dashboard_assets.py  test_decode_dashboard_builder.py  test_decode_dashboard_catalog.py  test_decode_dashboard_presentation.py  test_decode_dashboard_registry.py  test_dispatcher.py  test_entity_relationships.py  test_envelope.py  test_envelope_contract.py  test_evidence_db_current_contract.py  test_external_layers_candidates.py  test_external_layers_clinvar_context.py  test_external_layers_evidence.py  test_external_layers_population.py  test_external_layers_static.py  test_external_layers_wrappers.py  test_fda_pgx.py  test_genomi_install.py  (+49 more)
tests/data/: pgp_hms_public_genetic_data_manifest.json  tiny.clinvar.vcf  tiny.fa  tiny.fa.fai  tiny.gvcf.vcf  tiny.normalize.fa  tiny.normalize.vcf  tiny.population.vcf
(+265 files in other folders)
